# libkdtree

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  allocator.hpp  iterator.hpp  region.hpp
src/: function.hpp  kdtree.hpp  node.hpp
tests/: test.cpp
